Fix folder long titles alignment

--- a/client/css/other.css
+++ b/client/css/other.css
@@ -27,5 +27,7 @@
   height: 150px;
   width: 150px;
   max-height: 100%;
-  max-weight: 100%;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
